--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
 			<!-- Two -->
 				<section id="two" class="spotlight style2 right">
-					<span class="image fit main"><img src="images/ingame.jpeg" alt="" /></span>
+					<span class="image fit main bottom"><img src="images/ingame.jpeg" alt="" /></span>
 					<div class="content">
 						<header>
 							<h2>It's free as in FREEDOM!</h2>
