--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 									<h1>Can I get banned for using this cheat?</h1><br>
 									<p>No, but use this cheat at your own risk.</p><br>
 									<h1>Can I get Overwatch banned for using this cheat?</h1><br>
-									<p>Yes, The best way to avoid this is to queue with people you know won't report you, and play 2 games on an account in a 24 hour period, or try and hide it. An easy way to hide your hacks is to turn ON vis check in the visuals settings, this will hide all enemies until you can see them.<p>
+									<p>Yes<p>
 
 							</div>
 								<div class="4u$ 12u$(medium)">
@@ -71,7 +71,7 @@
 
 			<!-- Two -->
 				<section id="two" class="spotlight style2 right">
-					<span class="image fit main bottom"><img src="images/ingame.jpeg" alt="" /></span>
+					<span class="image fit main"><img src="images/ingame.jpeg" alt="" /></span>
 					<div class="content">
 						<header>
 							<h2>It's free as in FREEDOM!</h2>
