make images smaller and edit image sources in index

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
 			<!-- One -->
 				<section id="one" class="spotlight style1 bottom">
-					<span class="image fit main"><img src="images/menu.png" alt="" /></span>
+					<span class="image fit main"><img src="images/menu.jpg" alt="" /></span>
 					<div class="content">
 						<div class="container">
 							<div class="row">
@@ -65,7 +65,7 @@
 
 			<!-- Two -->
 				<section id="two" class="spotlight style2 right">
-					<span class="image fit main"><img src="images/ingame.jpeg" alt="" /></span>
+					<span class="image fit main"><img src="images/ingame.jpg" alt="" /></span>
 					<div class="content">
 						<header>
 							<h2>It's free as in FREEDOM!</h2>
@@ -78,7 +78,7 @@
 
 			<!-- Three -->
 				<section id="three" class="spotlight style3 left">
-					<span class="image fit main bottom"><img src="images/vac.png" alt="" /></span>
+					<span class="image fit main bottom"><img src="images/vac.jpg" alt="" /></span>
 					<div class="content">
 						<header>
 							<h2>NO VAC</h2>
