add footer image and add to footer

--- a/index.html
+++ b/index.html
@@ -152,6 +152,7 @@
 
 			<!-- Footer -->
 				<footer id="footer">
+					<img src="images/aimtux_white.png" style="width:132px;height:50px;">
 					<ul class="copyright">
 						<li>&copy; AimTux. All rights reserved.</li>
 					</ul>
