--- a/media.html
+++ b/media.html
@@ -38,6 +38,7 @@
 INSERT BODY HEREEEEEEE
 			<!-- Footer -->
 				<footer id="footer">
+					<img src="images/aimtux_white.png" style="width:132px;height:50px;">
 					<ul class="copyright">
 						<li>&copy; AimTux. All rights reserved.</li>
 					</ul>
