--- a/index.html
+++ b/index.html
@@ -140,12 +140,9 @@
 						<h2>We need your help!!</h2>
 						<p>Anything you can give helps go towards development and future goodies such as HvH servers</p>
 					</header>
-					<form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
-						<input type="hidden" name="cmd" value="_s-xclick" />
-							<input type="hidden" name="hosted_button_id" value="GYGWDDD6QAUCE" />
-							<input type="image" src="https://www.paypal.com/en_US/i/btn/btn_donateCC_LG.gif" border="0" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Donate" />
-							<img alt="" border="0" src="https://www.paypal.com/en_US/i/scr/pixel.gif" width="1" height="1" />
-					</form>
+					<ul class="actions">
+							<li><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=GYGWDDD6QAUCE" class="button">Donate with Paypal<sup>&reg;</sup></a></li>
+					</ul>
 				</div>
 			</section>
 
