update donate box wrapping etc

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 						<p>Anything you can give helps go towards development and future goodies such as HvH servers</p>
 					</header>
 					<ul class="actions">
-							<li><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=GYGWDDD6QAUCE" class="button">Donate with Paypal<sup>&reg;</sup></a></li>
+							<li><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=GYGWDDD6QAUCE" class="button donate">Donate with Paypal<sup>&reg;</sup></a></li>
 					</ul>
 				</div>
 			</section>
