webmaster tools meta tag add

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 	<head>
 		<title>AimTux - Undetected CSGO Cheat on Linux</title>
+		<meta name="google-site-verification" content="h-K6N4NPjA4o43-yJJu_fzcDB2RVCZ7GJ7_FjYxjka0" />
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
