--- a/index.html
+++ b/index.html
@@ -42,27 +42,33 @@
 				</section>
 
 			<!-- One -->
-				<section id="one" class="spotlight style1 bottom">
-					<span class="image fit main"><img src="images/menu.jpg" alt="" /></span>
-					<div class="content">
-						<div class="container">
-							<div class="row">
-								<div class="4u 12u$(medium)">
-									<header>
-										<h2>Frequently Asked Questions</h2>
-										<p>answers to some of the shit we get asked alot</p>
-									</header>
-								</div>
-								<div class="4u 12u$(medium)">
-									<h1>Can I get banned for using this cheat?</h1><br>
-									<p>No, but use this cheat at your own risk.</p><br>
-									<h1>Can I get Overwatch banned for using this cheat?</h1><br>
-									<p>Yes<p>
+			<section id="one" class="spotlight style1 bottom">
+				<span class="image fit main"><img src="images/menu.jpg" alt="" /></span>
+				<div class="content">
+					<div class="container">
+						<div class="row">
+							<div class="4u 12u$(medium)">
+								<header>
+									<h2>Frequently Asked Questions</h2>
+									<p>answers to some of the shit we get asked a lot</p>
+								</header>
+							</div>
+							<div class="4u 12u$(medium)">
+								<h1>Can I get banned for using this cheat?</h1><br>
+								<p>No, but use this cheat at your own risk.</p><br>
+								<h1>Can I get Overwatch banned for using this cheat?</h1><br>
+								<p>Yes, The best way to avoid this is to queue with people you know won't report you, and play 2 games on an account in a 24 hour period, or try and hide it. An easy way to hide your hacks is to turn ON vis check in the visuals settings, this will hide all enemies until you can see them.<p>
+
+						</div>
+							<div class="4u$ 12u$(medium)">
+								<h1>Can I share and download configs?</h1><br>
+								<p>Yes, they're stored at ~/.steam/steam/steamapps/common/Counter-Strike\ Global\ Offensive/ (unless you've changed your CSGO installation location).</p>
 							</div>
 						</div>
 					</div>
-					<a href="#two" class="goto-next scrolly">Next</a>
-				</section>
+				</div>
+				<a href="#two" class="goto-next scrolly">Next</a>
+			</section>
 
 			<!-- Two -->
 				<section id="two" class="spotlight style2 right">
