--- a/index.html
+++ b/index.html
@@ -18,12 +18,9 @@
 					<nav id="nav">
 						<ul>
 							<li><a href="index.html">Home</a></li>
-							<li>
-								<a href="https://github.com/McSwaggens/AimTux">Github</a>
-							</li>
 							<li><a href="media.html">Media</a></li>
 							<li><a href="https://gitter.im/AimTuxOfficial/Lobby">Gitter</a></li>
-							<li><a href="https://github.com/McSwaggens/AimTux/wiki/Installation" class="button special">Download</a></li>
+							<li><a href="https://github.com/McSwaggens/AimTux/" class="button special">Github</a></li>
 						</ul>
 					</nav>
 				</header>
@@ -40,105 +37,110 @@
 					</div>
 					<a href="#one" class="goto-next scrolly">Next</a>
 				</section>
-
+			
+			
 			<!-- One -->
-			<section id="one" class="spotlight style1 bottom">
-				<span class="image fit main"><img src="images/menu.jpg" alt="" /></span>
-				<div class="content">
-					<div class="container">
-						<div class="row">
-							<div class="4u 12u$(medium)">
-								<header>
-									<h2>Frequently Asked Questions</h2>
-									<p>answers to some of the shit we get asked a lot</p>
-								</header>
-							</div>
-							<div class="4u 12u$(medium)">
-								<h1>Can I get banned for using this cheat?</h1><br>
-								<p>No, but use this cheat at your own risk.</p><br>
-								<h1>Can I get Overwatch banned for using this cheat?</h1><br>
-								<p>Yes, The best way to avoid this is to queue with people you know won't report you, and play 2 games on an account in a 24 hour period, or try and hide it. An easy way to hide your hacks is to turn ON vis check in the visuals settings, this will hide all enemies until you can see them.<p>
-
-						</div>
-							<div class="4u$ 12u$(medium)">
-								<h1>Can I share and download configs?</h1><br>
-								<p>Yes, they're stored at ~/.steam/steam/steamapps/common/Counter-Strike\ Global\ Offensive/ (unless you've changed your CSGO installation location).</p>
-							</div>
-						</div>
-					</div>
-				</div>
-				<a href="#two" class="goto-next scrolly">Next</a>
-			</section>
 
 			<!-- Two -->
 				<section id="two" class="spotlight style2 right">
-					<span class="image fit main"><img src="images/ingame.jpg" alt="" /></span>
-					<div class="content">
-						<header>
-							<h2>It's free as in FREEDOM!</h2>
-							<p>Damn right.</p>
-						</header>
-						<p>Here at AimTux, we believe that all good things are free. So, AimTux will forever remain free and open source to all those who would like to contribute to the development of this beautiful cheat.</p>
-					</div>
+					<span class="image fit"><img src="images/menu.jpg" alt="" /></span>
 					<a href="#three" class="goto-next scrolly">Next</a>
 				</section>
 
-			<!-- Three -->
-				<section id="three" class="spotlight style3 left">
-					<span class="image fit main bottom"><img src="images/vac.jpg" alt="" /></span>
-					<div class="content">
-						<header>
-							<h2>NO VAC</h2>
-							<p>oh yes</p>
-						</header>
-						<p>I bet if you have used any Window's p2c (pay to cheat), you have lost a fair few accounts to the almighty Valve Anti Cheat System. Well, us Linux users don't face those issues, as VAC is simply obsolete on Linux Operating Systems. Fear no more of losing your skins and your reputation...</p>
-					</div>
-					<a href="#four" class="goto-next scrolly">Next</a>
-				</section>
-
-			<!-- Four -->
-				<section id="four" class="wrapper style1 special fade-up">
+			<section id="four" class="wrapper style1 special fade-up">
 					<div class="container">
 						<header class="major">
-							<h2>Jam-packed with features</h2>
-							<p>Over 30 awesome features baked into 21006 lines of code</p>
+							<h2>No VAC</h2>
+							<p>Because AimTux is a Linux cheat, we're immune to any VAC detections & VAC waves.</p>
 						</header>
 						<div class="box alt">
-							<div class="row uniform">
-								<section class="4u 6u(medium) 12u$(xsmall)">
-									<span class="icon alt major fa-shield"></span>
-									<h3>VAC Undetectable</h3>
-									<p>This cheat has never been detected and most likely will never be detected unless Valve implements a VAC system for Linux which would be extremely difficult and easy to circumvent</p>
-								</section>
-								<section class="4u 6u$(medium) 12u$(xsmall)">
-									<span class="icon alt major fa-crosshairs"></span>
-									<h3>Aimbot</h3>
-									<p>AimTux features a very customisable aimbot, which is extremely accurate and fast</p>
-								</section>
-								<section class="4u$ 6u(medium) 12u$(xsmall)">
-									<span class="icon alt major fa-bullseye"></span>
-									<h3>RCS</h3>
-									<p>The recoil control system can be used to achieve perfect accuracy or not so perfect accuracy, depending on whether you want to look legitimate or not</p>
-								</section>
-								<section class="4u 6u$(medium) 12u$(xsmall)">
-									<span class="icon alt major fa-times"></span>
-									<h3>Anti Aim</h3>
-									<p>AimTux features many Anti Aim's to stop other hackers in their tracks. These Anti Aim's include Spinbot, Jitter, Sideways, Backwards, Fake4 and Static up / down</p>
-								</section>
-								<section class="4u 6u(medium) 12u$(xsmall)">
-									<span class="icon alt major fa-eye"></span>
-									<h3>ESP</h3>
-									<p>The AimTux ESP provides all the information you wish to know about your enemies (and your teammates), including their health, location and name. The ESP also includes a tracer, and many other neat features.</p>
-								</section>
-								<section class="4u$ 6u$(medium) 12u$(xsmall)">
-									<span class="icon alt major fa-cloud-upload"></span>
-									<h3>Regularly Updated</h3>
-									<p>AimTux is updated every single day for new features, improvements to old features and bugfixes.</p>
-								</section>
-							</div>
 						</div>
 					</div>
 				</section>
+			
+			<!-- Three -->
+				<section id="three" class="spotlight style3 left">
+					<span class="image fit bottom"><img src="images/vac.jpg" alt="" /></span>
+					<a href="#four" class="goto-next scrolly">Next</a>
+				</section>
+			
+			<section id="four" class="wrapper style1 special fade-up">
+				<div class="container">
+					<header class="major">
+						<h2>Free And OpenSource</h2>
+						<p>AimTux is completely FOSS (Free and OpenSource Software)</p>
+					</header>
+						<div class="box alt">
+							<div class="row uniform">
+								<section class="4u 6u(medium) 12u$(xsmall)">
+									<span class="icon alt major fa-check"></span>
+									<h3>Open Source</h3>
+									<p>AimTux is the largest OpenSource hacking project to date, being updated constantly with new features and bug fixes.</p>
+								</section>
+								<section class="4u 6u$(medium) 12u$(xsmall)">
+									<span class="icon alt major fa-code-fork"></span>
+									<h3>GNU GPL v2</h3>
+									<p>The GNU GPL v2 lisence allows you to download, modify and share AimTux source code.</p>
+								</section>
+								<section class="4u$ 6u(medium) 12u$(xsmall)">
+									<span class="icon alt major fa-github"></span>
+									<h3>We're on Github</h3>
+									<p>We do all of our development openly on github.</p>
+								</section>
+							</div>
+						</div>
+				</div>
+			</section>
+		
+			<!-- Three -->
+			<section id="three" class="spotlight style3 left">
+				<span class="image bottom"><img src="images/code.png" alt="" /></span>
+				<a href="#four" class="goto-next scrolly">Next</a>
+			</section>
+			
+			<!-- Four -->
+			<section id="four" class="wrapper style1 special fade-up">
+				<div class="container">
+					<header class="major">
+						<h2>Jam-packed with features</h2>
+						<p>Over 30 awesome features baked into 21006 lines of code</p>
+					</header>
+					<div class="box alt">
+						<div class="row uniform">
+							<section class="4u 6u(medium) 12u$(xsmall)">
+								<span class="icon alt major fa-shield"></span>
+								<h3>VAC Undetectable</h3>
+								<p>This cheat has never been detected and most likely will never be detected unless Valve implements a VAC system for Linux which would be extremely difficult and easy to circumvent</p>
+							</section>
+							<section class="4u 6u$(medium) 12u$(xsmall)">
+								<span class="icon alt major fa-crosshairs"></span>
+								<h3>Aimbot</h3>
+								<p>AimTux features a very customisable aimbot, which is extremely accurate and fast</p>
+							</section>
+							<section class="4u$ 6u(medium) 12u$(xsmall)">
+								<span class="icon alt major fa-bullseye"></span>
+								<h3>RCS</h3>
+								<p>The recoil control system can be used to achieve perfect accuracy or not so perfect accuracy, depending on whether you want to look legitimate or not</p>
+							</section>
+							<section class="4u 6u$(medium) 12u$(xsmall)">
+								<span class="icon alt major fa-times"></span>
+								<h3>Anti Aim</h3>
+								<p>AimTux features many Anti Aim's to stop other hackers in their tracks. These Anti Aim's include Spinbot, Jitter, Sideways, Backwards, Fake4 and Static up / down</p>
+							</section>
+							<section class="4u 6u(medium) 12u$(xsmall)">
+								<span class="icon alt major fa-eye"></span>
+								<h3>ESP</h3>
+								<p>The AimTux ESP provides all the information you wish to know about your enemies (and your teammates), including their health, location and name. The ESP also includes a tracer, and many other neat features.</p>
+							</section>
+							<section class="4u$ 6u$(medium) 12u$(xsmall)">
+								<span class="icon alt major fa-cloud-upload"></span>
+								<h3>Regularly Updated</h3>
+								<p>AimTux is updated every single day for new features, improvements to old features and bugfixes.</p>
+							</section>
+						</div>
+					</div>
+				</div>
+			</section>
 
 			<!-- Five -->
 			<section id="five" class="wrapper style2 special fade">
@@ -155,12 +157,12 @@
 
 
 			<!-- Footer -->
-				<footer id="footer">
-					<img src="images/aimtux_white.png" style="width:132px;height:50px;">
-					<ul class="copyright">
-						<li>&copy; AimTux. All rights reserved.</li>
-					</ul>
-				</footer>
+			<footer id="footer">
+				<img src="images/aimtux_white.png" style="width:132px;height:50px;">
+				<ul class="copyright">
+					<li>&copy; AimTux. All rights reserved.</li>
+				</ul>
+			</footer>
 
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
