--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 					</nav>
 				</header>
 
-			<!-- Banner -->
-				<section id="banner">
+			<!-- One -->
+				<section id="one">
 					<div class="content">
 						<header>
 							<h2>Welcome to AimTux</h2>
@@ -35,19 +35,17 @@
 						</header>
 						<span class="image"><img src="images/penguin.png" alt="" /></span>
 					</div>
-					<a href="#one" class="goto-next scrolly">Next</a>
+					<a href="#two" class="goto-next scrolly">Next</a>
 				</section>
-			
-			
-			<!-- One -->
 
 			<!-- Two -->
-				<section id="two" class="spotlight style2 right">
-					<span class="image fit"><img src="images/menu.jpg" alt="" /></span>
-					<a href="#three" class="goto-next scrolly">Next</a>
-				</section>
+			<section id="two" class="spotlight style2 right">
+				<span class="image fit"><img src="images/menu.jpg" alt="" /></span>
+				<a href="#three" class="goto-next scrolly">Next</a>
+			</section>
 
-			<section id="four" class="wrapper style1 special fade-up">
+			<!-- Three -->
+			<section id="three" class="wrapper style1 special fade-up">
 					<div class="container">
 						<header class="major">
 							<h2>No VAC</h2>
@@ -57,14 +55,15 @@
 						</div>
 					</div>
 				</section>
-			
-			<!-- Three -->
-				<section id="three" class="spotlight style3 left">
+
+			<!-- Four -->
+				<section id="four" class="spotlight style3 left">
 					<span class="image fit bottom"><img src="images/vac.jpg" alt="" /></span>
-					<a href="#four" class="goto-next scrolly">Next</a>
+					<a href="#five" class="goto-next scrolly">Next</a>
 				</section>
-			
-			<section id="four" class="wrapper style1 special fade-up">
+
+			<!-- Five -->
+			<section id="five" class="wrapper style1 special fade-up">
 				<div class="container">
 					<header class="major">
 						<h2>Free And OpenSource</h2>
@@ -91,15 +90,15 @@
 						</div>
 				</div>
 			</section>
-		
-			<!-- Three -->
-			<section id="three" class="spotlight style3 left">
+
+			<!-- Six -->
+			<section id="six" class="spotlight style3 left">
 				<span class="image bottom"><img src="images/code.png" alt="" /></span>
-				<a href="#four" class="goto-next scrolly">Next</a>
+				<a href="#seven" class="goto-next scrolly">Next</a>
 			</section>
-			
-			<!-- Four -->
-			<section id="four" class="wrapper style1 special fade-up">
+
+			<!-- Seven -->
+			<section id="seven" class="wrapper style1 special fade-up">
 				<div class="container">
 					<header class="major">
 						<h2>Jam-packed with features</h2>
@@ -142,8 +141,8 @@
 				</div>
 			</section>
 
-			<!-- Five -->
-			<section id="five" class="wrapper style2 special fade">
+			<!-- Eight -->
+			<section id="eight" class="wrapper style2 special fade">
 				<div class="container">
 					<header>
 						<h2>We need your help!!</h2>
@@ -164,7 +163,7 @@
 				</ul>
 			</footer>
 
-		<!-- Scripts -->
+		<!-- Scripts - Load at the end so page loads faster -->
 			<script src="assets/js/jquery.min.js"></script>
 			<script src="assets/js/jquery.scrolly.min.js"></script>
 			<script src="assets/js/jquery.dropotron.min.js"></script>
