--- a/media.html
+++ b/media.html
@@ -35,8 +35,9 @@
 							<h2>Media</h2>
 							<p>All the AimTux Entertainment you could ever want ;D</p>
 						</header>
-
-						<div id="youtube" class="spidochetube"></div>
+						<section>
+						<div id="youtube" class="spidochetube" style="padding-bottom: 420px;"></div>
+						</section>
 
 			<!-- Footer -->
 				<footer id="footer">
