--- a/index.html
+++ b/index.html
@@ -66,25 +66,25 @@
 			<section id="five" class="wrapper style1 special fade-up">
 				<div class="container">
 					<header class="major">
-						<h2>Free And OpenSource</h2>
-						<p>AimTux is completely FOSS (Free and OpenSource Software)</p>
+						<h2>Free And Open Source</h2>
+						<p>AimTux is completely FOSS (Free and Open Source Software)</p>
 					</header>
 						<div class="box alt">
 							<div class="row uniform">
 								<section class="4u 6u(medium) 12u$(xsmall)">
 									<span class="icon alt major fa-check"></span>
 									<h3>Open Source</h3>
-									<p>AimTux is the largest OpenSource hacking project to date, being updated constantly with new features and bug fixes.</p>
+									<p>AimTux is the largest Open Source hacking project to date, being updated constantly with new features and bug fixes.</p>
 								</section>
 								<section class="4u 6u$(medium) 12u$(xsmall)">
 									<span class="icon alt major fa-code-fork"></span>
 									<h3>GNU GPL v2</h3>
-									<p>The GNU GPL v2 lisence allows you to download, modify and share AimTux source code.</p>
+									<p>The GNU GPL v2 licence allows you to download, modify and share AimTux source code.</p>
 								</section>
 								<section class="4u$ 6u(medium) 12u$(xsmall)">
 									<span class="icon alt major fa-github"></span>
-									<h3>We're on Github</h3>
-									<p>We do all of our development openly on github.</p>
+									<h3>We're on GitHub</h3>
+									<p>We do all of our development openly on GitHub.</p>
 								</section>
 							</div>
 						</div>
@@ -109,7 +109,7 @@
 							<section class="4u 6u(medium) 12u$(xsmall)">
 								<span class="icon alt major fa-shield"></span>
 								<h3>VAC Undetectable</h3>
-								<p>This cheat has never been detected and most likely will never be detected unless Valve implements a VAC system for Linux which would be extremely difficult and easy to circumvent</p>
+								<p>This cheat has never been detected and most likely will never be detected unless Valve implements a VAC system for Linux which would be extremely difficult and easy to circumvent.</p>
 							</section>
 							<section class="4u 6u$(medium) 12u$(xsmall)">
 								<span class="icon alt major fa-crosshairs"></span>
@@ -119,12 +119,12 @@
 							<section class="4u$ 6u(medium) 12u$(xsmall)">
 								<span class="icon alt major fa-bullseye"></span>
 								<h3>RCS</h3>
-								<p>The recoil control system can be used to achieve perfect accuracy or not so perfect accuracy, depending on whether you want to look legitimate or not</p>
+								<p>The recoil control system can be used to achieve perfect accuracy or not so perfect accuracy, depending on whether you want to look legitimate or not.</p>
 							</section>
 							<section class="4u 6u$(medium) 12u$(xsmall)">
 								<span class="icon alt major fa-times"></span>
 								<h3>Anti Aim</h3>
-								<p>AimTux features many Anti Aim's to stop other hackers in their tracks. These Anti Aim's include Spinbot, Jitter, Sideways, Backwards, Fake4 and Static up / down</p>
+								<p>AimTux features many Anti Aims to stop other hackers in their tracks. These Anti Aim's include Spinbot, Jitter, Sideways, Backwards, Fake4 and Static up / down</p>
 							</section>
 							<section class="4u 6u(medium) 12u$(xsmall)">
 								<span class="icon alt major fa-eye"></span>
