One last correction.

--- a/media.html
+++ b/media.html
@@ -19,7 +19,7 @@
 						<ul>
 							<li><a href="index.html">Home</a></li>
 							<li>
-								<a href="https://github.com/McSwaggens/AimTux">Github</a>
+								<a href="https://github.com/McSwaggens/AimTux">GitHub</a>
 							</li>
 							<li><a href="media.html">Media</a></li>
 							<li><a href="https://gitter.im/AimTuxOfficial/Lobby">Gitter</a></li>
