--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 							<section class="4u 6u$(medium) 12u$(xsmall)">
 								<span class="icon alt major fa-times"></span>
 								<h3>Anti Aim</h3>
-								<p>AimTux features many Anti Aims to stop other hackers in their tracks. These Anti Aim's include Spinbot, Jitter, Sideways, Backwards, Fake4 and Static up / down</p>
+								<p>AimTux features many Anti Aims to stop other hackers in their tracks. These Anti Aim's include Spinbot, Jitter, Sideways, Backwards, LISP, Static up / down and many more!</p>
 							</section>
 							<section class="4u 6u(medium) 12u$(xsmall)">
 								<span class="icon alt major fa-eye"></span>
