--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
 			<!-- Two -->
 			<section id="two" class="spotlight style2 right">
-				<span class="image fit"><img src="images/screenshot1.jpg" alt="" /></span>
+				<span class="image fit"><img src="images/screenshot1.png" alt="" /></span>
 				<a href="#three" class="goto-next scrolly">Next</a>
 			</section>
 
