--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 				<div class="container">
 					<header class="major">
 						<h2>Jam-packed with features</h2>
-						<p>Over 30 awesome features baked into 21006 lines of code</p>
+						<p>Over 30 awesome features baked into over 38000 lines of code</p>
 					</header>
 					<div class="box alt">
 						<div class="row uniform">
@@ -114,7 +114,7 @@
 							<section class="4u 6u$(medium) 12u$(xsmall)">
 								<span class="icon alt major fa-crosshairs"></span>
 								<h3>Aimbot</h3>
-								<p>AimTux features a very customisable aimbot, which is extremely accurate and fast</p>
+								<p>AimTux features a per-weapon customisable aimbot, which is extremely accurate and fast.</p>
 							</section>
 							<section class="4u$ 6u(medium) 12u$(xsmall)">
 								<span class="icon alt major fa-bullseye"></span>
@@ -135,6 +135,11 @@
 								<span class="icon alt major fa-cloud-upload"></span>
 								<h3>Regularly Updated</h3>
 								<p>AimTux is updated every single day for new features, improvements to old features and bugfixes.</p>
+							</section>
+							<section class="4u$ -4u 6u$(medium) 12u$(xsmall)">
+								<span class="icon alt major fa-magic"></span>
+								<h3>Skin Changer</h3>
+								<p>AimTux also features an easy-to-use skin changer that has the ability to bring you all the newest skins for the best user experience.</p>
 							</section>
 						</div>
 					</div>
