update lines of code

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 				<div class="container">
 					<header class="major">
 						<h2>Jam-packed with features</h2>
-						<p>Over 30 awesome features baked into over 38000 lines of code</p>
+						<p>Over 30 awesome features baked into 27830 lines of code</p>
 					</header>
 					<div class="box alt">
 						<div class="row uniform">
