--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 			<footer id="footer">
 				<img src="images/aimtux_white.png" style="width:132px;height:50px;">
 				<ul class="copyright">
-					<li>&copy; AimTux. All rights reserved.</li>
+					<li>&copy; 2017 AimTux. All rights reserved.</li>
 				</ul>
 			</footer>
 
